# adept-shop-titans-simulator

./: Cargo.toml  README.md  TODO.md  Unpacking_Apps_Script_Code.md  build.sh  build_release.sh  run.sh
bundle/: dungeons.yaml  innate_skills.tsv
config/: hero_builder.tsv  study_docket.tsv
data_sheets/: blueprints_v_10.2.1_slash_1.0.1.773.tsv  blueprints_v_11.1.1_slash_1.0.1.868.tsv  greensim_hero_skills_v_10.2.1_slash_1.0.1.773.tsv  greensim_innate_skills_v_10.2.1_slash_1.0.1.773.tsv
input/: dungeons.yaml  dungeons_old.yaml  hero_builder.csv  hero_builder.tsv  hero_builder_old.csv  hero_classes.yaml  heroes.csv  study_docket.csv  study_docket.tsv
release/bundle/: hero_classes.yaml
src/: combinations.rs  decimals.rs  deserialize.rs  dockets.rs  dungeons.rs  equipment.rs  gui.rs  hero_builder.rs  heroes.rs  init.rs  inputs.rs  main.rs  sheet_processing.rs  simdata.rs  simulation.rs  simulations.rs  skills.rs  studies.rs  trials.rs
src/studies/: single_hero_skill_study.rs  static_duo_skill_study.rs
st_sim/: Cargo.toml
