[package]
name = "st_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.60"
rand = "0.8.5"
log = "0.4"
fast_log = {version = "1.5.30"}
fstrings = "0.2.3"
csv = "1.1.6"
strum = { version = "0.24", features = ["derive"] }